# vsdt-lab-work-7

./: .gitignore  CMakeLists.txt  README.md
include/: moc_task1.cpp_parameters  task1.h  task2.h  task3.h  task4.h
resources/: Task1.qml  Task2.qml  Task3.qml  Task4.qml  TrainForm.qml  TrainItem.qml  main.qml  resources.qrc
src/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp
